--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -25,7 +25,9 @@ jobs:
         
                 steps:                               
                         - name: Install-Addons
-                          run: |                                  
+                          run: |               
+                                  sudo apt-get remove binutils-arm-none-eabi gcc-arm-none-eabi
+                                  sudo add-apt-repository ppa:team-gcc-arm-embedded/ppa
                                   sudo apt-get update
                                   sudo dpkg --add-architecture i386
                                   sudo apt-get install libncurses5
