--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -26,15 +26,15 @@ jobs:
                 steps:                               
                         - name: Install-Addons
                           run: |               
-                                  sudo apt-get remove binutils-arm-none-eabi gcc-arm-none-eabi
-                                  sudo add-apt-repository ppa:team-gcc-arm-embedded/ppa
                                   sudo apt-get update
                                   sudo dpkg --add-architecture i386
                                   sudo apt-get install libncurses5
                                   sudo apt-get install libbz2-1.0
                                   sudo apt-get install libz1
                                   sudo apt-get install valgrind
-                                  sudo apt-get install gcc-arm-none-eabi binutils-arm-none-eabi gdb-arm-none-eabi openocd
+                                  sudo apt-get install gcc-arm-none-eabi binutils-arm-none-eabi 
+                                  #sudo gdb-arm-none-eabi 
+                                  sudo openocd
                                   sudo apt-get install xvfb
 
                         - uses: actions/checkout@v2
