--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -32,8 +32,7 @@ jobs:
                                   sudo apt-get install libbz2-1.0
                                   sudo apt-get install libz1
                                   sudo apt-get install valgrind
-                                  sudo apt-get install 
-                                  sudo gcc-arm-none-eabi
+                                  sudo apt-get install gcc-arm-none-eabi
                                   sudo apt-get install xvfb
 
                         - uses: actions/checkout@v2
