--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -36,7 +36,7 @@ jobs:
                                   sudo apt-get install libz1
                                   sudo apt-get install valgrind
                                   sudo apt-get install gcc-arm-none-eabi
-                                  #sudo apt-get install gdb-arm-none-eabi
+                                  sudo apt-get install gdb-arm-none-eabi
                                   sudo apt-get install xvfb
 
                         - uses: actions/checkout@v2
