--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -28,11 +28,10 @@ jobs:
                           run: |               
                                   sudo apt-get update
                                   
-                                  #sudo dpkg --add-architecture i386
-                                  
-                                  sudo apt-get install libncurses5:i386
-                                  sudo apt-get install libbz2-1.0:i386
-                                  sudo apt-get install libz1:i386
+                                  sudo dpkg --add-architecture i386
+                                  sudo apt-get install libncurses5
+                                  sudo apt-get install libbz2-1.0
+                                  sudo apt-get install libz1
                                   sudo apt-get install valgrind
                                   sudo apt-get install gcc-arm-none-eabi
                                   sudo apt-get install gdb-arm-none-eabi
