--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -5,7 +5,7 @@ on: [pull_request]
 
 jobs:
         Firmware_Tests:
-                name: "${matrix.Name}"                        
+                name: ${{matrix.Name}}                        
                 runs-on: ubuntu-16.04
                 strategy:
                         matrix:
