--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -21,7 +21,7 @@ jobs:
                 env: 
                         INSTALL_DIR: /usr/local
                         CUBE_INSTALL_DIR: ${{INSTALL_DIR}}/STM32CubeMX
-                        PYTHONPATH: ${{PWD}}
+                        PYTHONPATH: $PWD
         
                 steps:                               
                         - name: Install-Addons
