--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -61,7 +61,7 @@ jobs:
                           env: 
                                 INSTALL_DIR: /usr/local
                                 CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
-                                PYTHONPATH: $PWD
+                                PYTHONPATH: ${GITHUB_WORKSPACE}
                                 ${{matrix.env}} : "true"
                                   
                         - name: ${{matrix.name}}
