--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -21,7 +21,7 @@ jobs:
                 env: 
                         INSTALL_DIR: /usr/local
                         CUBE_INSTALL_DIR: /usr/local/STM32CubeMX
-                        PYTHONPATH: ${GITHUB_WORKSPACE}
+                        PYTHONPATH: $PWD
         
                 steps:                               
                         - name: Install-Addons
@@ -53,22 +53,27 @@ jobs:
                         - name: Install
                           run: |
                                   pipenv install
-                                  echo "${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$GITHUB_PATH && ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}" >> $GITHUB_PATH
+                                  echo "${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$GITHUB_PATH && 
+                                  ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}" >> $GITHUB_PATH
+                          env: 
+                                INSTALL_DIR: /usr/local
+                                CUBE_INSTALL_DIR: /usr/local/STM32CubeMX
+                                PYTHONPATH: $PWD
                         
                         - name: Before ${{matrix.name}}
                           run: |
                                   ./scripts/travis_ci/print_bin_versions.sh
                           env: 
                                 INSTALL_DIR: /usr/local
-                                CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
-                                PYTHONPATH: ${GITHUB_WORKSPACE}
+                                CUBE_INSTALL_DIR: /usr/local/STM32CubeMX
+                                PYTHONPATH: $PWD
                                 ${{matrix.env}} : "true"
                                   
                         - name: ${{matrix.name}}
                           run: |
-                                  ./scripts/travis_ci/travis_script.sh ${{env.CUBE_INSTALL_DIR}}/STM32CubeMx
+                                  ./scripts/travis_ci/travis_script.sh $CUBE_INSTALL_DIR/STM32CubeMx
                           env: 
                                 INSTALL_DIR: /usr/local
-                                CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
+                                CUBE_INSTALL_DIR: /usr/local/STM32CubeMX
                                 PYTHONPATH: $PWD
                                 ${{matrix.env}} : "true"
