--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -58,6 +58,7 @@ jobs:
                                   
                                   sudo ./scripts/environment_setup/install_cmake.sh /usr/local
                                   sudo ./scripts/environment_setup/install_gcc_arm_none_eabi.sh /usr/local
+                                  pipenv run sudo python scripts/environment_setup/install_cube.py /usr/local/STM32CubeMX ./tools/en.STM32CubeMX_v5-3-0.zip
 
                           env: 
                                 INSTALL_DIR: /usr/local
