--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -36,6 +36,7 @@ jobs:
                                   sudo apt-get install gcc-arm-none-eabi
                                   sudo apt-get install gdb-arm-none-eabi
                                   sudo apt-get install xvfb
+                                  xvfb -run
 
                         - uses: actions/checkout@v2
                           with:
