--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -36,8 +36,7 @@ jobs:
                                   sudo apt-get install valgrind
                                   sudo apt-get install gcc-arm-none-eabi
                                   sudo apt-get install gdb-arm-none-eabi
-                                  sudo apt-get install xvfb
-                                  sudo systemctl start xvfb@:99.service
+                                  sudo apt-get install xvfb -y
                                 
                         - uses: actions/checkout@v2
                           with:
