--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -34,8 +34,8 @@ jobs:
                                   sudo apt-get install libbz2-1.0
                                   sudo apt-get install libz1
                                   sudo apt-get install valgrind
-                                  sudo apt-get install gcc-arm-none-eabi
-                                  sudo apt-get install gdb-arm-none-eabi
+                                  #sudo apt-get install gcc-arm-none-eabi
+                                  #sudo apt-get install gdb-arm-none-eabi
                                   sudo apt-get install xvfb -y
                                   sudo service xvfb start
                                 
