--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -51,7 +51,9 @@ jobs:
                                   git lfs pull
                                   
                         - name: Install
-                          run: |
+                          uses: GabrielBB/xvfb-action@v1.0
+                          with:
+                                run: |
                                   pipenv install                                
                                   PATH=${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$PATH && 
                                   ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}
