--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -16,8 +16,8 @@ jobs:
                                 #  env: RUN_FORMATTING_CHECKS
                                 - Name: "Build ARM Executables"
                                   env: RUN_ARM_BUILD
-                                - Name: "Check STM32CubeMX Code Generation"
-                                  env: RUN_CUBE_CODEGEN_CHECKS 
+                                #- Name: "Check STM32CubeMX Code Generation"
+                                #env: RUN_CUBE_CODEGEN_CHECKS 
                 env: 
                         INSTALL_DIR: /usr/local
                         CUBE_INSTALL_DIR: /usr/local/STM32CubeMX
@@ -54,7 +54,7 @@ jobs:
                         - name: Install
                           run: |
                                   pipenv install
-                                  PYTHONPATH ="$PYTHONPATH:./scripts"    
+                                  PYTHONPATH = $PWD    
                                                               
                                   PATH=${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$PATH && 
                                   ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}
