--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -30,6 +30,7 @@ jobs:
                                   sudo dpkg --add-architecture i386
                                   sudo apt-get install libncurses5 libbz2-1.0 libz1 valgrind
                                   sudo apt install xvfb
+                                  Xvfb :99 & export DISPLAY=:99
                                                                                            
                         - uses: actions/checkout@v2
                           with:
