--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -14,8 +14,8 @@ jobs:
                                 #  env: RUN_X86_TESTS
                                 #- Name: "Check Formatting"
                                 #  env: RUN_FORMATTING_CHECKS
-                                #- Name: "Build ARM Executables"
-                                #  env: RUN_ARM_BUILD
+                                - Name: "Build ARM Executables"
+                                  env: RUN_ARM_BUILD
                                 - Name: "Check STM32CubeMX Code Generation"
                                   env: RUN_CUBE_CODEGEN_CHECKS 
                 env: 
