--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -29,8 +29,8 @@ jobs:
                                   sudo apt-get update
                                   sudo dpkg --add-architecture i386
                                   sudo apt-get install libncurses5 libbz2-1.0 libz1 valgrind
-                                  sudo apt install xvfb
-                                  Xvfb :99 & export DISPLAY=:99
+                                  sudo apt-get install xvfb
+                                  
                                                                                            
                         - uses: actions/checkout@v2
                           with:
@@ -46,7 +46,9 @@ jobs:
                                   git lfs pull
                                   
                         - name: Install
-                          run: |
+                          uses: GabrielBB/xvfb-action@v1
+                          with:
+                            run: |
                                   pipenv install
                                   PYTHONPATH={$PWD}:$PYTHONPATH
                                                               
