--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -30,6 +30,7 @@ jobs:
                                   sudo dpkg --add-architecture i386
                                   sudo apt-get install libncurses5 libbz2-1.0 libz1 valgrind
                                   sudo apt-get install xvfb
+                                  xvfb-run
                                   export DISPLAY=':99.0'
                                                                                            
                         - uses: actions/checkout@v2
