--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -30,8 +30,11 @@ jobs:
                                   sudo dpkg --add-architecture i386
                                   sudo apt-get install libncurses5 libbz2-1.0 libz1 valgrind
                                   sudo apt-get install xvfb
+                                  sudp apt-get install systemd
                                   sudo systemctl enable xvfb
                                   export DISPLAY=':99.0'
+                                  Xvfb -ac :99 -screen 0 1280x1024x16 > /dev/null 2>&1 &
+
                                                                                            
                         - uses: actions/checkout@v2
                           with:
